# ChangeLog for net-mail/isync
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/isync/ChangeLog,v 1.26 2015/01/26 23:50:05 radhermit Exp $

*isync-1.1.2 (26 Jan 2015)

  26 Jan 2015; Tim Harder <radhermit@gentoo.org> +isync-1.1.2.ebuild:
  Version bump.

*isync-1.1.1 (20 Jun 2014)

  20 Jun 2014; Tim Harder <radhermit@gentoo.org> +isync-1.1.1.ebuild:
  Version bump.

  20 Dec 2013; Tim Harder <radhermit@gentoo.org> +isync-1.1.0.ebuild:
  Version bump (bug #494814).

*isync-1.1.0 (20 Dec 2013)

  20 Dec 2013; Tim Harder <radhermit@gentoo.org> +isync-1.1.0.ebuild:
  Version bump (bug #494814).

  25 Mar 2013; Eray Aslan <eras@gentoo.org> -isync-1.0.5.ebuild:
  Remove vulnerable version

  24 Feb 2013; Agostino Sarubbo <ago@gentoo.org> isync-1.0.6.ebuild:
  Stable for amd64, wrt bug #458420

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> isync-1.0.6.ebuild:
  Stable for x86, wrt bug #458420

*isync-1.0.6 (20 Feb 2013)

  20 Feb 2013; Eray Aslan <eras@gentoo.org> +isync-1.0.6.ebuild:
  Security bump - bug #458420

  27 Jun 2012; Eray Aslan <eras@gentoo.org> -isync-1.0.4.ebuild:
  remove old

  26 Jun 2012; Agostino Sarubbo <ago@gentoo.org> isync-1.0.5.ebuild:
  Stable for amd64, wrt bug #422141

  25 Jun 2012; Jeff Horelick <jdhore@gentoo.org> isync-1.0.5.ebuild:
  marked x86 per bug 422141

*isync-1.0.5 (04 May 2012)

  04 May 2012; Eray Aslan <eras@gentoo.org> +isync-1.0.5.ebuild:
  version bump

  23 Nov 2011; Eray Aslan <eras@gentoo.org> -isync-1.0.2.ebuild,
  -isync-1.0.3.ebuild:
  remove old

  22 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> isync-1.0.4.ebuild:
  x86 stable wrt bug #391217

  07 Jun 2011; Eray Aslan <eras@gentoo.org> isync-1.0.4.ebuild:
  Fix documentation dir - bug #298102

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> isync-1.0.2.ebuild,
  isync-1.0.3.ebuild, isync-1.0.4.ebuild:
  Remove virtual/libc

*isync-1.0.4 (23 Feb 2008)
